"OpenFOAM-7\applications\solvers\multiphase\reactingEulerFoam" is getting Updated

--- a/applications/solvers/multiphase/reactingEulerFoam/TnbReactingEulerFoamLibs/TnbReactingEulerFoamLibs.vcxproj
+++ b/applications/solvers/multiphase/reactingEulerFoam/TnbReactingEulerFoamLibs/TnbReactingEulerFoamLibs.vcxproj
@@ -44,6 +44,96 @@
     <ClCompile Include="TnbLib\functionObjects\phaseForces.cxx" />
     <ClCompile Include="TnbLib\functionObjects\sizeDistribution.cxx" />
     <ClCompile Include="TnbLib\functionObjects\sizeDistributionNamedEnum.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\Antoine.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\AntoineExtended.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\ArdenBuck.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\constantSaturationConditions.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\constantSurfaceTensionCoefficient.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\Frossling.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\functionMultiphase.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\interfaceCompositionModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\InterfaceCompositionModels.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\massTransferModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\newInterfaceCompositionModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\newMassTransferModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\newSaturationModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\newSurfaceTensionModelMultiphase.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\NonRandomTwoLiquid.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\polynomialMultiphase.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\Raoult.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\saturationModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\sphericalMassTransfer.cxx" />
+    <ClCompile Include="TnbLib\interfacialCompositionModels\surfaceTensionModelMultiphase.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\Antal.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\aspectRatioModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\AttouFerschneider.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\Beetstra.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\Burns.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\constantAspectRatio.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\constantLiftCoefficient.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\constantNuHeatTransfer.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\constantTurbulentDispersionCoefficient.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\constantVirtualMassCoefficient.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\cosineWallDamping.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\deposition.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\dragModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\Ergun.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\Frank.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\Gibilaro.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\GidaspowErgunWenYu.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\GidaspowSchillerNaumann.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\Gosman.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\heatTransferModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\interpolatedWallDamping.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\IshiiZuber.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\Lain.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\Lamb.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\LegendreMagnaudet.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\liftModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\linearWallDamping.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\LopezDeBertodano.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\Moraga.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\newAspectRatioModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\newDragModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\newHeatTransferModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\newLiftModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\newPhaseTransferModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\newSwarmCorrection.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\newTurbulentDispersionModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\newVirtualMassModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\newWallDampingModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\newWallLubricationModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\noLift.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\noSwarm.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\noTurbulentDispersion.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\noVirtualMass.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\noWallDamping.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\noWallLubrication.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\phaseTransferModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\RanzMarshall.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\SchillerNaumann.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\segregated.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\sineWallDamping.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\sphericalHeatTransfer.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\swarmCorrection.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\SyamlalOBrien.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\Tenneti.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\TomiyamaAnalytic.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\TomiyamaAspectRatio.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\TomiyamaCorrelated.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\TomiyamaKataokaZunSakaguchi.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\TomiyamaLift.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\TomiyamaSwarm.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\TomiyamaWallLubrication.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\turbulentDispersionModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\VakhrushevEfremov.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\virtualMassModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\wallDampedLift.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\wallDampingModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\wallDependentModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\wallLubricationModel.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\Wellek.cxx" />
+    <ClCompile Include="TnbLib\interfacialModels\WenYu.cxx" />
     <ClCompile Include="TnbLib\phaseSystems\hRefConstThermos.cxx" />
     <ClCompile Include="TnbLib\phaseSystems\phasePairKey.cxx" />
     <ClCompile Include="TnbLib\phaseSystems\phaseSystem.cxx" />
@@ -83,11 +173,13 @@
     <ClInclude Include="TnbLib\interfacialCompositionModels\HenryI.hxx" />
     <ClInclude Include="TnbLib\interfacialCompositionModels\interfaceCompositionModel.hxx" />
     <ClInclude Include="TnbLib\interfacialCompositionModels\InterfaceCompositionModelTemplate.hxx" />
+    <ClInclude Include="TnbLib\interfacialCompositionModels\InterfaceCompositionModelTemplateI.hxx" />
     <ClInclude Include="TnbLib\interfacialCompositionModels\massTransferModel.hxx" />
     <ClInclude Include="TnbLib\interfacialCompositionModels\NonRandomTwoLiquid.hxx" />
     <ClInclude Include="TnbLib\interfacialCompositionModels\polynomialMultiphase.hxx" />
     <ClInclude Include="TnbLib\interfacialCompositionModels\Raoult.hxx" />
     <ClInclude Include="TnbLib\interfacialCompositionModels\Saturated.hxx" />
+    <ClInclude Include="TnbLib\interfacialCompositionModels\SaturatedI.hxx" />
     <ClInclude Include="TnbLib\interfacialCompositionModels\saturationModel.hxx" />
     <ClInclude Include="TnbLib\interfacialCompositionModels\sphericalMassTransfer.hxx" />
     <ClInclude Include="TnbLib\interfacialCompositionModels\surfaceTensionModelMultiphase.hxx" />
